@@ -14,6 +14,9 @@ require 'cucumber/treetop_parser/feature_parser'
 require 'cucumber/cli'
 require 'cucumber/broadcaster'
 
+$KCODE='u'
+require 'jcode'
+
 module Cucumber
   LANGUAGE_FILE = File.expand_path(File.dirname(__FILE__) + '/cucumber/languages.yml')
 
